--- a/.github/workflows/render-rmarkdown.yml
+++ b/.github/workflows/render-rmarkdown.yml
@@ -17,11 +17,9 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: |
-            rmarkdown
-            knitr
+      - name: Install dependencies
+        run: |
+          install.packages(c('rmarkdown', 'knitr'))
 
       - name: Setup Pandoc
         uses: r-lib/actions/setup-pandoc@v2
