--- a/.github/workflows/render-rmarkdown.yml
+++ b/.github/workflows/render-rmarkdown.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install system dependencies
+        run: sudo apt-get install -y libcurl4-openssl-dev
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
@@ -21,7 +24,7 @@ jobs:
 
       - name: Render site
         run: |
-          rmarkdown::render_site(encoding = 'UTF-8')
+          rmarkdown::render_site()
 
       - name: Setup pages
         uses: actions/configure-pages@v5
