--- a/.github/workflows/render-rmarkdown.yml
+++ b/.github/workflows/render-rmarkdown.yml
@@ -14,10 +14,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install system dependencies
-        run: sudo apt-get install -y \
-          libcurl4-openssl-dev \
-          libharfbuzz-dev \
-          libfribidi-dev
+        run: |
+          sudo apt-get install -y \
+            libcurl4-openssl-dev \
+            libharfbuzz-dev \
+            libfribidi-dev
 
       - uses: r-lib/actions/setup-pandoc@v2
 
