ci: use more kosher way to call R functions

--- a/.github/workflows/render-rmarkdown.yml
+++ b/.github/workflows/render-rmarkdown.yml
@@ -27,8 +27,8 @@ jobs:
       - uses: r-lib/actions/setup-renv@v2
 
       - name: Render site
-        run: |
-          Rscript -e "rmarkdown::render_site()"
+        run: rmarkdown::render_site()
+        shell: Rscript {0}
 
       - name: Setup pages
         uses: actions/configure-pages@v5
