--- a/.github/workflows/render-rmarkdown.yml
+++ b/.github/workflows/render-rmarkdown.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   render-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -39,4 +45,5 @@ jobs:
           path: "_site/"
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
