--- a/_output.yaml
+++ b/_output.yaml
@@ -1,5 +1,5 @@
 xaringan::moon_reader:
-  css: ["default", "../assets/styles.css"]
+  css: ["default", "assets/styles.css"]
   nature:
     highlightStyle: github
     highlightLines: true
