--- a/_site.yml
+++ b/_site.yml
@@ -1,6 +1,6 @@
 output:
   xaringan::moon_reader:
-    css: ["default", "assets/styles.css"]
+    css: ["default", "css/styles.css"]
     nature:
       highlightStyle: github
       highlightLines: true
