--- a/.github/workflows/render-rmarkdown.yml
+++ b/.github/workflows/render-rmarkdown.yml
@@ -25,7 +25,8 @@ jobs:
           sudo apt-get install -y \
             libcurl4-openssl-dev \
             libharfbuzz-dev \
-            libfribidi-dev
+            libfribidi-dev \
+            ffmpeg
 
       - uses: r-lib/actions/setup-pandoc@v2
 
