--- a/.github/workflows/compile-latex.yaml
+++ b/.github/workflows/compile-latex.yaml
@@ -15,8 +15,15 @@ jobs:
           work_in_root_file_dir: true
           root_file: |
             lecture14/main.tex
-      - name: Upload PDF file
-        uses: actions/upload-artifact@v4
+
+      - name: Setup pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
         with:
-          name: PDF
           path: lecture14/main.pdf
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
