--- a/.github/workflows/compile-latex.yaml
+++ b/.github/workflows/compile-latex.yaml
@@ -1,10 +1,21 @@
 name: Build LaTeX document
 
-on: [push]
+on:
+  push:
+    branches:
+      - main # Set a branch to deploy
 
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
