ci: don't push pdf files to pages just now

--- a/.github/workflows/compile-latex.yaml
+++ b/.github/workflows/compile-latex.yaml
@@ -25,23 +25,24 @@ jobs:
         with:
           work_in_root_file_dir: true
           root_file: |
+            lecture13/main.tex
             lecture14/main.tex
 
-      - name: Create temporary directory for artifacts
-        run: mkdir -p artifacts
-
-      - name: Copy files to artifacts directory
-        run: |
-          cp lecture14/main.pdf artifacts/lecture14.pdf
-
-      - name: Setup pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: artifacts
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      # - name: Create temporary directory for artifacts
+      #   run: mkdir -p artifacts
+      #
+      # - name: Copy files to artifacts directory
+      #   run: |
+      #     cp lecture14/main.pdf artifacts/lecture14.pdf
+      #
+      # - name: Setup pages
+      #   uses: actions/configure-pages@v5
+      #
+      # - name: Upload artifact
+      #   uses: actions/upload-pages-artifact@v3
+      #   with:
+      #     path: artifacts
+      #
+      # - name: Deploy to GitHub Pages
+      #   id: deployment
+      #   uses: actions/deploy-pages@v4
