--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,12 @@ _site/
 *_files
 
 assignments/
+
+# nix -----------------------------------------------
+
+# Ignore build outputs from performing a nix-build or `nix build` command
+result
+result-*
+
+# Ignore direnv folder
+.direnv/
