feat: add site-url

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
   title: "Computational Statistics"
   description: |
     Resources page for the Computational Statistics course
+  site-url: "https://math-ku.github.io/compstat/"
 
 format:
   html:
