--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -15,6 +15,7 @@ format:
     colortheme: moloch-tomorrow
     fig-width: 2.6
     fig-height: 2
+    highlight-style: tango
 
 knitr:
   opts_chunk:
