feat(slides): disable indentation

--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -19,6 +19,7 @@ format:
     linkcolor: black
     urlcolor: DodgerBlue3
     highlight-style: tango
+    indent: true
     include-in-header:
       text: |
         \usepackage[export]{adjustbox}
