--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -20,6 +20,8 @@ format:
     urlcolor: DodgerBlue3
     highlight-style: tango
     indent: true
+    template-partials:
+      - tightlist.tex
     include-in-header:
       text: |
         \usepackage[export]{adjustbox}
