feat(slides): add x/total slide numbering style

--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -25,6 +25,7 @@ format:
     include-in-header:
       text: |
         \usepackage[export]{adjustbox}
+        \setbeamertemplate{page number in head/foot}[appendixframenumber]
 
 knitr:
   opts_chunk:
