--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v5
 
+      - name: Install dependencies
+        run: sudo apt-get install -y librsvg
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
