--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -14,6 +14,7 @@ execute:
 format:
   beamer:
     aspectratio: 1610
+    classoption: onlytextwidth
     incremental: true
     theme: moloch
     colortheme: moloch-tomorrow
