--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: sudo apt-get install -y librsvg
+        run: sudo apt-get install -y librsvg2
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
