--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,9 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: sudo apt-get install -y librsvg2-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y librsvg2-dev
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
