--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y librsvg2-dev
+          sudo apt-get install -y librsvg2-bin
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
