feat: add assignments page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
     left:
       - text: "Home"
         href: index.qmd
-      - schedule.qmd
+      - assignments.qmd
 
 format:
   html:
