feat: set short title

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,8 +14,8 @@ website:
   search: true
 
   navbar:
-    background: primary
     search: true
+    title: CompStat
     left:
       - text: "Home"
         href: index.qmd
