--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,6 +41,8 @@ jobs:
 
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
+        env:
+          QUARTO_PROFILE: publish
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
