--- a/_quarto-publish.yml
+++ b/_quarto-publish.yml
@@ -4,7 +4,7 @@ format:
     include-in-header:
       - text: |
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
-          \setbeameroption{show notes}
+          \usepackage{fontsetup}
 
 filters:
   - incremental-to-static-slides
