--- a/_quarto.yml
+++ b/_quarto.yml
@@ -46,6 +46,7 @@ format:
       - text: |
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
           \setbeameroption{show notes}
+          \usepackage{fontsetup}
       - file: slides/packages.tex
 
 date-format: long
