refactor: use caching

--- a/_quarto-publish.yml
+++ b/_quarto-publish.yml
@@ -6,5 +6,8 @@ format:
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
           \usepackage{fontsetup}
 
+execute:
+  cache: false
+
 filters:
   - incremental-to-static-slides
