feat: add overview and FAQ

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,10 @@ website:
     left:
       - text: "Home"
         href: index.qmd
+      - overview.qmd
       - assignments.qmd
+      - text: "FAQ"
+        href: faq.qmd
 
 format:
   html:
