--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,7 @@ website:
       - text: "Home"
         href: index.qmd
       - overview.qmd
-      - assignments.qmd
+      # - assignments.qmd
       - exam.qmd
       - text: "FAQ"
         href: faq.qmd
