--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: cachix/cachix-action@v15
+        with:
+          name: jolars
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
