feat(lecture2): update the slides

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,6 +50,8 @@ format:
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
           \setbeameroption{show notes}
           \usepackage{fontsetup}
+          \usepackage{animate}
+          \usepackage{media9}
       - file: slides/packages.tex
 
 date-format: long
