feat: hide notes in published pdfs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,7 @@ format:
       - text: |
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
           \usepackage{fontsetup}
+          \usepackage{pdfpc}
       - file: slides/packages.tex
 
 date-format: long
