--- a/_quarto-publish.yml
+++ b/_quarto-publish.yml
@@ -1,5 +1,11 @@
-execute:
-  cache: false
+format:
+  beamer:
+    incremental: false
+    include-in-header:
+      - text: |
+          \setbeamertemplate{page number in head/foot}[appendixframenumber]
+          \usepackage{fontsetup}
+          \usepackage[hidenotes]{pdfpc}
 
 filters:
   - incremental-to-static-slides
