refactor: hide notes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -61,7 +61,7 @@ format:
       - text: |
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
           \usepackage{fontsetup}
-          \usepackage{pdfpc}
+          \usepackage[hidenotes]{pdfpc}
       - file: slides/packages.tex
 
 date-format: long
