--- a/_quarto-publish.yml
+++ b/_quarto-publish.yml
@@ -3,7 +3,7 @@ format:
     incremental: false
     include-in-header:
       - text: |
-          \pdfpcsetup{hidenotes}
+          \renewcommand{\pdfpcnote}[1]{}
 
 filters:
   - incremental-to-static-slides
