fix: use `handout` option for publish profile

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,7 +44,8 @@ format:
     html-math-method: katex
   beamer:
     aspectratio: 1610
-    classoption: onlytextwidth
+    classoption:
+      - onlytextwidth
     theme: moloch
     colortheme: moloch-tomorrow
     keep-tex: true
