--- a/_quarto-publish.yml
+++ b/_quarto-publish.yml
@@ -1,9 +1,14 @@
 format:
   beamer:
     incremental: false
+    classoption:
+      - handout
     include-in-header:
       - text: |
           \renewcommand{\pdfpcnote}[1]{}
 
 filters:
   - incremental-to-static-slides
+
+execute:
+  cache: false
