feat: add exercise solutions for week 1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,7 @@ website:
         href: index.qmd
       - overview.qmd
       - assignments.qmd
+      - exercises.qmd
       - exam.qmd
       - text: "FAQ"
         href: faq.qmd
