feat: center figures generally

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,7 @@ format:
     colortheme: moloch-tomorrow
     fig-width: 2.6
     fig-height: 2
+    fig-align: center
     colorlinks: true
     linkcolor: black
     urlcolor: DodgerBlue3
