--- a/_quarto.yml
+++ b/_quarto.yml
@@ -57,10 +57,10 @@ format:
     indent: true
     template-partials:
       - slides/tightlist.tex
+      - slides/passoptions.latex
     include-in-header:
       - text: |
           \setbeamertemplate{page number in head/foot}[appendixframenumber]
-          \unimathsetup{math-style=ISO,bold-style=ISO}
       - file: slides/packages.tex
 
 date-format: long
