Add refresh task to taskfile

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,6 +5,10 @@ tasks:
     cmds:
       - quarto preview
 
+  preview-refresh:
+    cmds:
+      - quarto preview --cache-refresh
+
   render:
     cmds:
       - "quarto render --profile present"
