--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   render:
     - "*.qmd"
     - "*.md"
+    - "!slides/lecture8.qmd"
     - "!slides/lecture9.qmd"
     - "!slides/lecture10.qmd"
     - "!slides/lecture11.qmd"
