--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,7 +45,7 @@ format:
     linkcolor: black
     urlcolor: DodgerBlue3
     highlight-style: tango
-    # cite-method: biblatex
+    cite-method: biblatex
     indent: true
     template-partials:
       - slides/tightlist.tex
